[tool.poetry]
name = "aswf_stack"
version = "0.1.0"
description = "environment for Imath/OpenEXR/OpenColorIO/OpenImageIO"
authors = ["Joseph Goldstone <jgoldstone@arri.com>"]
maintainers = ["Joseph Goldstone <jgoldstone@arri.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "aswf",
    "imath", "openexr", "opencolorio", "ocio", "openimageio", "oiio"
]

[tool.poetry.dependencies]
python = "^3.7.7"
numpy = "*"
fileseq = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.urls]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

